--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Kuldeep Keshwar <kuldeepkeshwar@gmail.com>",
   "dependencies": {
     "@filbert-js/core": "latest",
-    "@filbert-js/macro": "0.0.2",
+    "@filbert-js/macro": "latest",
     "gatsby": "^2.23.12",
     "gatsby-plugin-filbert": "latest",
     "gatsby-plugin-google-analytics": "^2.3.6",
